// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileBottomNav > renders links for main sections 1`] = `
<nav
  aria-label="Main navigation"
  class="fixed bottom-0 left-0 right-0 z-50 flex h-[calc(4rem+env(safe-area-inset-bottom))] w-full items-center justify-around border-t border-[var(--glass-border)] bg-[var(--nav-bg)] backdrop-blur-[var(--glass-blur)] pb-[env(safe-area-inset-bottom)] shadow-[var(--shadow-up)] transition-all md:hidden"
  role="navigation"
  style="transition-duration: 600ms; transition-timing-function: var(--ease-premium);"
>
  <a
    aria-current="page"
    aria-label="Home"
    class="group relative flex flex-1 flex-col items-center justify-center gap-1.5 py-1 text-[var(--nav-text)] transition-all outline-none select-none active text-[var(--nav-link)] font-bold scale-110"
    data-discover="true"
    href="/dashboard"
  >
    <div
      class="relative"
    >
      <div
        class="absolute inset-[-14px] rounded-full bg-[var(--nav-link)] opacity-10 blur-xl -z-10"
      />
      <span
        class="block z-10"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="DashboardIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 13h8V3H3zm0 8h8v-6H3zm10 0h8V11h-8zm0-18v6h8V3z"
          />
        </svg>
      </span>
    </div>
    <span
      class="z-10 text-[9px] font-bold uppercase tracking-tighter"
    >
      Home
    </span>
  </a>
  <a
    aria-label="News"
    class="group relative flex flex-1 flex-col items-center justify-center gap-1.5 py-1 text-[var(--nav-text)] transition-all outline-none select-none opacity-60 hover:opacity-100"
    data-discover="true"
    href="/news"
  >
    <div
      class="relative"
    >
      <span
        class="block z-10"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="ArticleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-5 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
          />
        </svg>
      </span>
    </div>
    <span
      class="z-10 text-[9px] font-bold uppercase tracking-tighter"
    >
      News
    </span>
  </a>
  <a
    aria-label="Events"
    class="group relative flex flex-1 flex-col items-center justify-center gap-1.5 py-1 text-[var(--nav-text)] transition-all outline-none select-none opacity-60 hover:opacity-100"
    data-discover="true"
    href="/events"
  >
    <div
      class="relative"
    >
      <span
        class="block z-10"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="EventNoteIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 10H7v2h10zm2-7h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 16H5V8h14zm-5-5H7v2h7z"
          />
        </svg>
      </span>
    </div>
    <span
      class="z-10 text-[9px] font-bold uppercase tracking-tighter"
    >
      Events
    </span>
  </a>
  <a
    aria-label="Schedule"
    class="group relative flex flex-1 flex-col items-center justify-center gap-1.5 py-1 text-[var(--nav-text)] transition-all outline-none select-none opacity-60 hover:opacity-100"
    data-discover="true"
    href="/schedule"
  >
    <div
      class="relative"
    >
      <span
        class="block z-10"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="TodayIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 16H5V8h14zM7 10h5v5H7z"
          />
        </svg>
      </span>
    </div>
    <span
      class="z-10 text-[9px] font-bold uppercase tracking-tighter"
    >
      Schedule
    </span>
  </a>
  <a
    aria-label="Profile"
    class="group relative flex flex-1 flex-col items-center justify-center gap-1.5 py-1 text-[var(--nav-text)] transition-all outline-none select-none opacity-60 hover:opacity-100"
    data-discover="true"
    href="/profile"
  >
    <div
      class="relative"
    >
      <span
        class="block z-10"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PersonIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
          />
        </svg>
      </span>
    </div>
    <span
      class="z-10 text-[9px] font-bold uppercase tracking-tighter"
    >
      Profile
    </span>
  </a>
</nav>
`;

exports[`MobileBottomNav > renders links for main sections 2`] = `
<div>
  <nav
    aria-label="Main navigation"
    class="fixed bottom-0 left-0 right-0 z-50 flex h-[calc(4rem+env(safe-area-inset-bottom))] w-full items-center justify-around border-t border-[var(--glass-border)] bg-[var(--nav-bg)] backdrop-blur-[var(--glass-blur)] pb-[env(safe-area-inset-bottom)] shadow-[var(--shadow-up)] transition-all md:hidden"
    role="navigation"
    style="transition-duration: 600ms; transition-timing-function: var(--ease-premium);"
  >
    <a
      aria-current="page"
      aria-label="Home"
      class="group relative flex flex-1 flex-col items-center justify-center gap-1.5 py-1 text-[var(--nav-text)] transition-all outline-none select-none active text-[var(--nav-link)] font-bold scale-110"
      data-discover="true"
      href="/dashboard"
    >
      <div
        class="relative"
      >
        <div
          class="absolute inset-[-14px] rounded-full bg-[var(--nav-link)] opacity-10 blur-xl -z-10"
        />
        <span
          class="block z-10"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DashboardIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 13h8V3H3zm0 8h8v-6H3zm10 0h8V11h-8zm0-18v6h8V3z"
            />
          </svg>
        </span>
      </div>
      <span
        class="z-10 text-[9px] font-bold uppercase tracking-tighter"
      >
        Home
      </span>
    </a>
    <a
      aria-label="News"
      class="group relative flex flex-1 flex-col items-center justify-center gap-1.5 py-1 text-[var(--nav-text)] transition-all outline-none select-none opacity-60 hover:opacity-100"
      data-discover="true"
      href="/news"
    >
      <div
        class="relative"
      >
        <span
          class="block z-10"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="ArticleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-5 14H7v-2h7zm3-4H7v-2h10zm0-4H7V7h10z"
            />
          </svg>
        </span>
      </div>
      <span
        class="z-10 text-[9px] font-bold uppercase tracking-tighter"
      >
        News
      </span>
    </a>
    <a
      aria-label="Events"
      class="group relative flex flex-1 flex-col items-center justify-center gap-1.5 py-1 text-[var(--nav-text)] transition-all outline-none select-none opacity-60 hover:opacity-100"
      data-discover="true"
      href="/events"
    >
      <div
        class="relative"
      >
        <span
          class="block z-10"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="EventNoteIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M17 10H7v2h10zm2-7h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 16H5V8h14zm-5-5H7v2h7z"
            />
          </svg>
        </span>
      </div>
      <span
        class="z-10 text-[9px] font-bold uppercase tracking-tighter"
      >
        Events
      </span>
    </a>
    <a
      aria-label="Schedule"
      class="group relative flex flex-1 flex-col items-center justify-center gap-1.5 py-1 text-[var(--nav-text)] transition-all outline-none select-none opacity-60 hover:opacity-100"
      data-discover="true"
      href="/schedule"
    >
      <div
        class="relative"
      >
        <span
          class="block z-10"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="TodayIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 16H5V8h14zM7 10h5v5H7z"
            />
          </svg>
        </span>
      </div>
      <span
        class="z-10 text-[9px] font-bold uppercase tracking-tighter"
      >
        Schedule
      </span>
    </a>
    <a
      aria-label="Profile"
      class="group relative flex flex-1 flex-col items-center justify-center gap-1.5 py-1 text-[var(--nav-text)] transition-all outline-none select-none opacity-60 hover:opacity-100"
      data-discover="true"
      href="/profile"
    >
      <div
        class="relative"
      >
        <span
          class="block z-10"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="PersonIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4m0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4"
            />
          </svg>
        </span>
      </div>
      <span
        class="z-10 text-[9px] font-bold uppercase tracking-tighter"
      >
        Profile
      </span>
    </a>
  </nav>
  <div
    aria-hidden="true"
    class="h-[calc(4rem+env(safe-area-inset-bottom))] bg-[var(--page-bg)] transition-colors duration-500 md:hidden"
  />
</div>
`;
